--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "build:manifest": "cd builder && yarn run build:manifest"
     },
     "dependencies": {
+        "clsx": "^2.1.1",
         "gh-pages": "^5.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
