--- a/src/SimpleCollection/package.json
+++ b/src/SimpleCollection/package.json
@@ -14,6 +14,7 @@
         "@tailwindcss/line-clamp": "^0.4.4",
         "@uniwebcms/module-sdk": "^1.22.0",
         "clsx": "^2.1.1",
+        "prism-react-renderer": "^2.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
