--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "build:manifest": "cd builder && yarn run build:manifest"
     },
     "dependencies": {
+        "@headlessui/react": "^2.1.2",
         "clsx": "^2.1.1",
+        "flexsearch": "^0.7.43",
+        "flowbite-react": "^0.10.1",
         "gh-pages": "^5.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
