--- a/src/SimpleCollection/package.json
+++ b/src/SimpleCollection/package.json
@@ -19,6 +19,7 @@
         "prism-react-renderer": "^2.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-highlight-words": "^0.20.0",
         "react-icons": "^4.8.0",
         "tailwindcss": "^3.3.3"
     },
