--- a/src/SimpleCollection/package.json
+++ b/src/SimpleCollection/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^18.2.0",
         "react-highlight-words": "^0.20.0",
         "react-icons": "^4.8.0",
+        "react-router-dom": "^6.26.1",
         "tailwindcss": "^3.3.3"
     },
     "devDependencies": {
